初めてのコミット

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">My NameCard</string>
-    <string name="tapHere">ニックネーム</string>
+    <string name="tapHere">あだ名</string>
 </resources>
